templates/templates/block-namespace-without-label-prefix.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sblocknamespacewithoutlabelprefix
  labels:
    app.kubernetes.io/name: kubernetes-opa-library
    app.kubernetes.io/created-by: ssbostan
spec:
  crd:
    spec:
      names:
        kind: K8sBlockNamespaceWithoutLabelPrefix
      validation:
        openAPIV3Schema:
          type: object
          properties:
            labelName:
              type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sblocknamespacewithoutlabelprefix

        violation[{"msg": msg}] {
          not startswith(input.review.object.metadata.name, lower(sprintf("%s-", [input.review.object.metadata.labels[input.parameters.labelName]])))
          msg := "Creating namespaces without project prefix is restricted on this cluster."
        }
