templates/templates/block-pod-add-linux-capabilities.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sblockpodaddlinuxcapabilities
  labels:
    app.kubernetes.io/name: kubernetes-opa-library
    app.kubernetes.io/created-by: ssbostan
spec:
  crd:
    spec:
      names:
        kind: K8sBlockPodAddLinuxCapabilities
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sblockpodaddlinuxcapabilities

        import future.keywords.in

        violation[{"msg": msg}] {
          check_linux_capabilities == true
          msg := "Adding new linux capabilities to containers is not allowed in this cluster."
        }

        check_linux_capabilities {
          some container in containers
          container.securityContext.capabilities.add != []
        }

        containers[container] {
          container := input.review.object.spec.containers[_]
        }

        containers[container] {
          container := input.review.object.spec.ephemeralContainers[_]
        }

        containers[container] {
          container := input.review.object.spec.initContainers[_]
        }
