templates/templates/block-pod-add-sysctl-parameter.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sblockpodaddsysctlparameter
  labels:
    app.kubernetes.io/name: kubernetes-opa-library
    app.kubernetes.io/created-by: ssbostan
spec:
  crd:
    spec:
      names:
        kind: K8sBlockPodAddSysctlParameter
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sblockpodaddsysctlparameter

        violation[{"msg": msg}] {
          check_pod_add_sysctl_parameter
          msg := "Adding new kernel parameters to containers is not allowed in this cluster."
        }

        check_pod_add_sysctl_parameter {
          count(input.review.object.spec.securityContext.sysctls) > 0
        }
