templates/templates/block-pod-container-privilege-escalation.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sblockpodcontainerprivilegeescalation
  labels:
    app.kubernetes.io/name: kubernetes-opa-library
    app.kubernetes.io/created-by: ssbostan
spec:
  crd:
    spec:
      names:
        kind: K8sBlockPodContainerPrivilegeEscalation
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sblockpodcontainerprivilegeescalation

        violation[{"msg": msg}] {
          check_container_allow_privilege_escalation == true
          msg := "Running containers with allowPrivilegeEscalation is restricted on this namespace."
        }

        check_container_allow_privilege_escalation {
          input.review.object.spec.containers[_].securityContext.allowPrivilegeEscalation == true
        }

        check_container_allow_privilege_escalation {
          input.review.object.spec.ephemeralContainers[_].securityContext.allowPrivilegeEscalation == true
        }

        check_container_allow_privilege_escalation {
          input.review.object.spec.initContainers[_].securityContext.allowPrivilegeEscalation == true
        }
