templates/templates/block-pod-host-pid-namespace.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sblockpodhostpidnamespace
  labels:
    app.kubernetes.io/name: kubernetes-opa-library
    app.kubernetes.io/created-by: ssbostan
spec:
  crd:
    spec:
      names:
        kind: K8sBlockPodHostPIDNamespace
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sblockpodhostpidnamespace

        violation[{"msg": msg}] {
          input.review.object.spec.hostPID == true
          msg := "Sharing hostPID is restricted in this cluster."
        }
