templates/templates/block-pod-hostip-hostport-container.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sblockpodhostiphostportcontainer
  labels:
    app.kubernetes.io/name: kubernetes-opa-library
    app.kubernetes.io/created-by: ssbostan
spec:
  crd:
    spec:
      names:
        kind: K8sBlockPodHostIPHostPortContainer
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sblockpodhostiphostportcontainer

        import future.keywords.in

        violation[{"msg": msg}] {
          check_pod_hostip_or_hostport_container == true
          msg := "Running containers with hostIP/hostPort parameters is restricted on this namespace."
        }

        containers[container] {
          container := input.review.object.spec.containers[_]
        }

        containers[container] {
          container := input.review.object.spec.ephemeralContainers[_]
        }

        containers[container] {
          container := input.review.object.spec.initContainers[_]
        }

        check_pod_hostip_or_hostport_container {
          some key, _ in containers[_].ports[_]
          key == "hostIP"
        }

        check_pod_hostip_or_hostport_container {
          some key, _ in containers[_].ports[_]
          key == "hostPort"
        }
