templates/templates/block-pod-proc-mount-container.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sblockpodprocmountcontainer
  labels:
    app.kubernetes.io/name: kubernetes-opa-library
    app.kubernetes.io/created-by: ssbostan
spec:
  crd:
    spec:
      names:
        kind: K8sBlockPodProcMountContainer
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sblockpodprocmountcontainer

        import future.keywords.in

        violation[{"msg": msg}] {
          check_container_proc_mount_default_value
          msg := "Changing container procMount value is not allowed in this cluster."
        }

        check_container_proc_mount_default_value {
          some container in containers
          container.securityContext.procMount == true
        }

        check_container_proc_mount_default_value {
          some container in containers
          container.securityContext.procMount != "Default"
        }

        containers[container] {
          container := input.review.object.spec.containers[_]
        }

        containers[container] {
          container := input.review.object.spec.ephemeralContainers[_]
        }

        containers[container] {
          container := input.review.object.spec.initContainers[_]
        }
