templates/templates/block-pod-run-root-user-container.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sblockpodrunrootusercontainer
  labels:
    app.kubernetes.io/name: kubernetes-opa-library
    app.kubernetes.io/created-by: ssbostan
spec:
  crd:
    spec:
      names:
        kind: K8sBlockPodRunRootUserContainer
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sblockpodrunrootusercontainer

        import future.keywords.every
        import future.keywords.in

        violation[{"msg": msg}] {
          not container_run_as_non_root
          msg := "Containers must run with a non-root user in this cluster."
        }

        containers[container] {
          container := input.review.object.spec.containers[_]
        }

        containers[container] {
          container := input.review.object.spec.ephemeralContainers[_]
        }

        containers[container] {
          container := input.review.object.spec.initContainers[_]
        }

        container_run_as_non_root {
          every container in containers {
            container.securityContext.runAsNonRoot == true
          }
        }
