templates/templates/block-pod-unconfined-apparmor-profile-container.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sblockpodunconfinedapparmorprofilecontainer
  labels:
    app.kubernetes.io/name: kubernetes-opa-library
    app.kubernetes.io/created-by: ssbostan
spec:
  crd:
    spec:
      names:
        kind: K8sBlockPodUnconfinedAppArmorProfileContainer
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sblockpodunconfinedapparmorprofilecontainer

        import future.keywords.in

        violation[{"msg": msg}] {
          check_unconfined_apparmor_profile_container
          msg := "Running containers using unconfined apparmor profile is restricted on this namespace."
        }

        check_unconfined_apparmor_profile_container {
          some key, value in input.review.object.metadata.annotations
          startswith(lower(key), "container.apparmor.security.beta.kubernetes.io/")
          lower(value) == "unconfined"
        }
