templates/templates/block-pod-untrusted-image-registries.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sblockpoduntrustedimageregistries
  labels:
    app.kubernetes.io/name: kubernetes-opa-library
    app.kubernetes.io/created-by: ssbostan
spec:
  crd:
    spec:
      names:
        kind: K8sBlockPodUntrustedImageRegistries
      validation:
        openAPIV3Schema:
          type: object
          properties:
            trustedImageRegistries:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sblockpoduntrustedimageregistries

        import future.keywords.every
        import future.keywords.in

        violation[{"msg": msg}] {
          not check_container_image_registry_address
          msg := "Running containers using untrusted image registries is restricted on this namespace."
        }

        check_container_image_registry_address {
          every container in containers {
            glob.match(trusted_image_registries[_], null, lower(container.image))
          }
        }

        trusted_image_registries[registry] {
          some r in input.parameters.trustedImageRegistries
          registry := sprintf("%s/*", [lower(r)])
        }

        containers[container] {
          container := input.review.object.spec.containers[_]
        }

        containers[container] {
          container := input.review.object.spec.ephemeralContainers[_]
        }

        containers[container] {
          container := input.review.object.spec.initContainers[_]
        }
