templates/templates/block-pod-volume-types.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sblockpodvolumetypes
  labels:
    app.kubernetes.io/name: kubernetes-opa-library
    app.kubernetes.io/created-by: ssbostan
spec:
  crd:
    spec:
      names:
        kind: K8sBlockPodVolumeTypes
      validation:
        openAPIV3Schema:
          type: object
          properties:
            volumes:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sblockpodvolumetypes

        import future.keywords.in

        violation[{"msg": msg}] {
          blocked_volumes := {volume |
            input.review.object.spec.volumes[_][volume]
            volume != "name"
            volume in input.parameters.volumes
          }
          count(blocked_volumes) > 0
          msg := sprintf(
            "Mounting (%s) volume types is restricted in this cluster.",
            [concat(", ", input.parameters.volumes)],
          )
        }
