templates/templates/block-pod-without-node-selector.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sblockpodwithoutnodeselector
  labels:
    app.kubernetes.io/name: kubernetes-opa-library
    app.kubernetes.io/created-by: ssbostan
spec:
  crd:
    spec:
      names:
        kind: K8sBlockPodWithoutNodeSelector
      validation:
        openAPIV3Schema:
          type: object
          properties:
            nodeSelector:
              type: object
              additionalProperties:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sblockpodwithoutnodeselector

        violation[{"msg": msg}] {
          not input.review.object.spec.nodeSelector == input.parameters.nodeSelector
          msg := "Running Pods without proper nodeSelector is restricted on this namespace."
        }
