templates/templates/block-resource-without-required-labels.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sblockresourcewithoutrequiredlabels
  labels:
    app.kubernetes.io/name: kubernetes-opa-library
    app.kubernetes.io/created-by: ssbostan
spec:
  crd:
    spec:
      names:
        kind: K8sBlockResourceWithoutRequiredLabels
      validation:
        openAPIV3Schema:
          type: object
          properties:
            labels:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sblockresourcewithoutrequiredlabels

        violation[{"msg": msg}] {
          required_labels := {label | label := input.parameters.labels[_]}
          provided_labels := {label | input.review.object.metadata.labels[label]}
          missing_labels := required_labels - provided_labels
          count(missing_labels) > 0
          msg := sprintf(
            "Creating %s resource is only allowed when adding (%s) labels.",
            [input.review.object.kind, concat(", ", missing_labels)],
          )
        }
