templates/templates/block-service-load-balancer.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sblockserviceloadbalancer
  labels:
    app.kubernetes.io/name: kubernetes-opa-library
    app.kubernetes.io/created-by: ssbostan
spec:
  crd:
    spec:
      names:
        kind: K8sBlockServiceLoadBalancer
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sblockserviceloadbalancer

        violation[{"msg": msg}] {
          input.review.object.spec.type == "LoadBalancer"
          msg := "Creating service of LoadBalancer type is not allowed on this cluster."
        }
