templates/templates/block-service-node-port.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sblockservicenodeport
  labels:
    app.kubernetes.io/name: kubernetes-opa-library
    app.kubernetes.io/created-by: ssbostan
spec:
  crd:
    spec:
      names:
        kind: K8sBlockServiceNodePort
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sblockservicenodeport

        violation[{"msg": msg}] {
          input.review.object.spec.type == "NodePort"
          msg := "Creating service of NodePort type is not allowed on this namespace."
        }
